bug fixed: Images not showing correctly in IE.

--- a/app/app.less
+++ b/app/app.less
@@ -187,10 +187,15 @@ body, md-content {
         }
     }
 
-    .md-tile-image {
-        max-width:100%;
-        max-height:100%;
-        object-fit: contain;
+    .tile-image {
+        background-position: 50% 50%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        bottom: 0;
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
     }
 }
 
